unpackaged/main/default/objects/Case/fields/Accounting_Sales_Audit_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Sales_Audit_Reasons__c</fullName>
    <label>Accounting/Sales Audit Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirm Mailing Address</fullName>
            </value>
            <value>
                <fullName>Refund Failure (IDOC)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>