unpackaged/main/default/objects/Case/fields/Additional_Privacy_Request_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Privacy_Request_Information__c</fullName>
    <description>This field will contain additional information to send to the Data Owners to process data owner requests</description>
    <inlineHelpText>This field will contain additional information to send to the Data Owners to process data owner requests</inlineHelpText>
    <label>Additional Privacy Request Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>