unpackaged/main/default/objects/Case/fields/AutomationBypassDateTime__c.field-meta.xml
<CustomField>
    <fullName>AutomationBypassDateTime__c</fullName>
    <label>Test</label>
    <type>DateTime</type>
</CustomField>