unpackaged/main/default/objects/Case/fields/AutomationBypassDateTimeDelay__c.field-meta.xml
<CustomField>
    <fullName>AutomationBypassDateTimeDelay__c</fullName>
    <formula>NOW()-0.000173611111</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AutomationBypassDateTime</label>
    <type>DateTime</type>
</CustomField>