unpackaged/main/default/objects/Case/fields/Awaiting_Agent_Response__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Agent_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Awaiting Agent Response</label>
    <type>Checkbox</type>
</CustomField>