unpackaged/main/default/objects/Case/fields/Awaiting_Customer_Response__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Customer_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Awaiting Customer Response</label>
    <type>Checkbox</type>
</CustomField>