unpackaged/main/default/objects/Case/fields/B2C_Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>B2C_Is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B2C Is Locked</label>
    <type>Checkbox</type>
</CustomField>