unpackaged/main/default/objects/Case/fields/Brand_Image_Link__c.field-meta.xml
<CustomField>
    <fullName>Brand_Image_Link__c</fullName>
    <description>Controlled by Brand Account - Link to the Brand&#39;s Publicly Accessible Image. To be used in email templates</description>
    <label>Brand Image Link</label>
    <type>Url</type>
</CustomField>