unpackaged/main/default/objects/Case/fields/Brand_Label__c.field-meta.xml
<CustomField>
    <fullName>Brand_Label__c</fullName>
    <label>Brand Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>