unpackaged/main/default/objects/Case/fields/Brand_Lookup_Search__c.field-meta.xml
<CustomField>
    <fullName>Brand_Lookup_Search__c</fullName>
    <description>This field is used to convert the Brand API value to a Label for use on Quick Actions</description>
    <formula>CASE(TEXT(Brand__c),
&quot;1&quot;, &quot;Tommy&quot;,
&quot;2&quot;, &quot;Calvin Klein&quot;,
&quot;4&quot;, &quot;Izod&quot;,
&quot;5&quot;, &quot;Van Heusen&quot;,
&quot;7&quot;, &quot;Speedo USA&quot;,
&quot;8&quot;, &quot;Heritage Brands&quot;,
&quot;9&quot;, &quot;Partner Brands&quot;,
&quot;81&quot;, &quot;IZOD.com&quot;,
&quot;82&quot;, &quot;Van Heusen.com&quot;,
&quot;83&quot;, &quot;Warner&#39;s&quot;,
&quot;84&quot;, &quot;Style Bureau&quot;,
&quot;11&quot;, &quot;True&amp;Co&quot;,
&quot;10&quot;, &quot;Olga&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand</label>
    <type>Text</type>
</CustomField>