unpackaged/main/default/objects/Case/fields/Business_Group__c.field-meta.xml
<CustomField>
    <fullName>Business_Group__c</fullName>
    <description>Used in the Corporate Request Form case type.</description>
    <inlineHelpText>Used in the Corporate Request Form case type.</inlineHelpText>
    <label>Business Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Case_Business_Group</valueSetName>
    </valueSet>
</CustomField>