unpackaged/main/default/objects/Case/fields/c_cancelationtimestamp__c.field-meta.xml
<CustomField>
    <fullName>c_cancelationtimestamp__c</fullName>
    <label>c_cancelationtimestamp</label>
    <type>DateTime</type>
</CustomField>