unpackaged/main/default/objects/Case/fields/CallDirection__c.field-meta.xml
<CustomField>
    <fullName>CallDirection__c</fullName>
    <description>Call Direction</description>
    <label>CallDirection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>