unpackaged/main/default/objects/Case/fields/CallDurationInSeconds__c.field-meta.xml
<CustomField>
    <fullName>CallDurationInSeconds__c</fullName>
    <description>Call duration in seconds</description>
    <label>CallDurationInSeconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>