unpackaged/main/default/objects/Case/fields/CallEndTime__c.field-meta.xml
<CustomField>
    <fullName>CallEndTime__c</fullName>
    <label>CallEndTime</label>
    <type>DateTime</type>
</CustomField>