unpackaged/main/default/objects/Case/fields/CallStartTime__c.field-meta.xml
<CustomField>
    <fullName>CallStartTime__c</fullName>
    <description>Call start time</description>
    <label>CallStartTime</label>
    <type>DateTime</type>
</CustomField>