unpackaged/main/default/objects/Case/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fedex Jonesville</fullName>
            </value>
            <value>
                <fullName>Fedex Bridgewater</fullName>
            </value>
            <value>
                <fullName>UPS - HR</fullName>
            </value>
            <value>
                <fullName>UPS - CK</fullName>
            </value>
            <value>
                <fullName>UPS - TH</fullName>
            </value>
            <value>
                <fullName>UPS - SP</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
                <isActive>false</isActive>
                <label>DHL</label>
            </value>
            <value>
                <fullName>UPS</fullName>
                <isActive>false</isActive>
                <label>UPS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>