unpackaged/main/default/objects/Case/fields/Case_Resolved_by_Hour__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolved_by_Hour__c</fullName>
    <description>This field is used for reporting to track resolved cases per hour.</description>
    <formula>Value(MID(TEXT( Resolved_Date__c  - (0.0417*4)), 12, 2))</formula>
    <label>Case Resolved by Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>