unpackaged/main/default/objects/Case/fields/Case_Source_Country__c.field-meta.xml
<CustomField>
    <fullName>Case_Source_Country__c</fullName>
    <label>Case Source Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
                <default>true</default>
                <label>US</label>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>