unpackaged/main/default/objects/Case/fields/CaseRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>CaseRecordTypeName__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <label>Case Record Type Name</label>
    <type>Text</type>
</CustomField>