unpackaged/main/default/objects/Case/fields/CCPA_Vendors__c.field-meta.xml
<CustomField>
    <fullName>CCPA_Vendors__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCPA Vendors</label>
    <referenceTo>CCPA_Vendors__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>