unpackaged/main/default/objects/Case/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CalvinKlein.us</fullName>
                <label>Online - CalvinKlein.com</label>
            </value>
            <value>
                <fullName>Calvin Klein Retail</fullName>
                <label>Calvin Klein Store</label>
            </value>
            <value>
                <fullName>Tommy.com</fullName>
                <label>Online - Tommy.com</label>
            </value>
            <value>
                <fullName>Tommy Hilfiger Retail</fullName>
                <label>Tommy Hilfiger Store</label>
            </value>
            <value>
                <fullName>SpeedoUSA.com</fullName>
                <label>Online - speedo.com</label>
            </value>
            <value>
                <fullName>VanHeusen.com</fullName>
                <label>Online - vanheusen.com</label>
            </value>
            <value>
                <fullName>Izod.com</fullName>
                <label>Online - Izod.com</label>
            </value>
            <value>
                <fullName>styleBureau.com</fullName>
                <label>Online - styleBureau.com</label>
            </value>
            <value>
                <fullName>trueandco.com</fullName>
                <label>Online -True&amp;co.com</label>
            </value>
            <value>
                <fullName>CalvinKlein.ca</fullName>
                <label>Online-CalvinKlein Canada</label>
            </value>
            <value>
                <fullName>Speedo.com</fullName>
            </value>
            <value>
                <fullName>Warner.com</fullName>
                <label>Online-Warner&#39;s</label>
            </value>
            <value>
                <fullName>Van Heusen | IZOD Company Store</fullName>
            </value>
            <value>
                <fullName>Amazon.com</fullName>
            </value>
            <value>
                <fullName>Nordstrom</fullName>
            </value>
            <value>
                <fullName>Other Retailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>