unpackaged/main/default/objects/Case/fields/Channel_READONLY__c.field-meta.xml
<CustomField>
    <fullName>Channel_READONLY__c</fullName>
    <description>This READONLY field is created to store customers original details filled through web form</description>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>