unpackaged/main/default/objects/Case/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Call Notes/Comments</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>