unpackaged/main/default/objects/Case/fields/Contact_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Customer_ID__c</fullName>
    <formula>Contact.Customer_Id__c</formula>
    <label>Contact Customer ID</label>
    <type>Text</type>
</CustomField>