unpackaged/main/default/objects/Case/fields/Contact_Loyalty_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Loyalty_ID__c</fullName>
    <formula>IF(!ISBLANK(Contact.LoyaltyID__c), Contact.LoyaltyID__c,  Loyalty_Account_Number__c)</formula>
    <label>Contact Loyalty ID</label>
    <type>Text</type>
</CustomField>