unpackaged/main/default/objects/Case/fields/COVID_19_Mask__c.field-meta.xml
<CustomField>
    <fullName>COVID_19_Mask__c</fullName>
    <defaultValue>false</defaultValue>
    <description>COVID-19 Mask Usage</description>
    <label>COVID-19 Mask</label>
    <type>Checkbox</type>
</CustomField>