unpackaged/main/default/objects/Case/fields/Create_Contact__c.field-meta.xml
<CustomField>
    <fullName>Create_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Contact</label>
    <type>Checkbox</type>
</CustomField>