unpackaged/main/default/objects/Case/fields/Created_Date_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Formatted__c</fullName>
    <formula>LEFT(TEXT(CreatedDate), 10)</formula>
    <label>Created Date Formatted</label>
    <type>Text</type>
</CustomField>