unpackaged/main/default/objects/Case/fields/csmrgp__Subject_Conversation__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Subject_Conversation__c</fullName>
    <formula>TRIM(SUBSTITUTE(  SUBSTITUTE(   SUBSTITUTE(  SUBSTITUTE(  SUBSTITUTE(
lower(Subject), &quot;fwd:&quot;, &quot;&quot;), &quot;fw:&quot;, &quot;&quot;),&quot;re:&quot;, &quot;&quot;),&quot;[email loop protection]&quot;,&quot;&quot;), &quot;[external]&quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject Conversation</label>
    <type>Text</type>
</CustomField>