unpackaged/main/default/objects/Case/fields/CSR_Email_UserConfirmation__c.field-meta.xml
<CustomField>
    <fullName>CSR_Email_UserConfirmation__c</fullName>
    <label>CSR Email UserConfirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>