unpackaged/main/default/objects/Case/fields/CSRmail__c.field-meta.xml
<CustomField>
    <fullName>CSRmail__c</fullName>
    <label>CSRmail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>