unpackaged/main/default/objects/Case/fields/CSRMailUpdateonContact__c.field-meta.xml
<CustomField>
    <fullName>CSRMailUpdateonContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSRMailUpdateonContact</label>
    <type>Checkbox</type>
</CustomField>