unpackaged/main/default/objects/Case/fields/Custom_Address_Origin_ID__c.field-meta.xml
<CustomField>
    <fullName>Custom_Address_Origin_ID__c</fullName>
    <formula>CASE(TEXT(Carrier__c),
&quot;FedEx Jonesville&quot;, &quot;a101U000002suh3QAA&quot;,
&quot;Fedex Bridgewater&quot;, &quot;a101U000002suhDQAQ&quot;,
&quot;UPS - HR&quot;, &quot;a101U000002suhIQAQ&quot;,
&quot;UPS - CK&quot;, &quot;a101U000002t2aFQAQ&quot;,
&quot;UPS - TH&quot;, &quot;a101U000002t2aPQAQ&quot;,
&quot;UPS - SP&quot;, &quot;a101U000002t2aUQAQ&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Address Origin ID</label>
    <type>Text</type>
</CustomField>