unpackaged/main/default/objects/Case/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <formula>IF(
    ISBLANK(SuppliedEmail),
    Contact.Email,
    SuppliedEmail
)</formula>
    <label>Customer Email</label>
    <type>Text</type>
</CustomField>