unpackaged/main/default/objects/Case/fields/Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone__c</fullName>
    <formula>IF(
    ISBLANK(SuppliedPhone),
    Contact.Phone,
    SuppliedPhone
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Phone</label>
    <type>Text</type>
</CustomField>