unpackaged/main/default/objects/Case/fields/Data_Owner__c.field-meta.xml
<CustomField>
    <fullName>Data_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Data Owner&#39;s Contact Record</description>
    <label>Data Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Privacy Requests</relationshipLabel>
    <relationshipName>PrivacyRequests</relationshipName>
    <type>Lookup</type>
</CustomField>