unpackaged/main/default/objects/Case/fields/Data_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Data_Owner_Name__c</fullName>
    <formula>IF(!ISBLANK(Data_Owner__c),
Data_Owner__r.FirstName  &amp; &quot; &quot; &amp; Data_Owner__r.LastName,
&#39;&#39;)</formula>
    <label>Data Owner Name</label>
    <type>Text</type>
</CustomField>