unpackaged/main/default/objects/Case/fields/DataOwnerOrContactName__c.field-meta.xml
<CustomField>
    <fullName>DataOwnerOrContactName__c</fullName>
    <formula>IF( ISBLANK(Data_Owner__c), Contact.FirstName + &#39; &#39; + Contact.LastName,  Data_Owner__r.FirstName + &#39; &#39; + Data_Owner__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Owner or Contact Name</label>
    <type>Text</type>
</CustomField>