unpackaged/main/default/objects/Case/fields/Date_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Date_On_Hold__c</fullName>
    <description>Field used for &quot;Case On Hold 3 Days Reminder&quot; Process Builder. Date for time Case was put on hold.</description>
    <label>Date On Hold</label>
    <type>Date</type>
</CustomField>