unpackaged/main/default/objects/Case/fields/Days_Until_Due__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Due__c</fullName>
    <formula>IF (!ISBLANK(Due_Date__c),
  IF(Due_Date__c &gt; NOW(),
  Due_Date__c - NOW(),
  0),
NULL)</formula>
    <label>Days Until Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>