unpackaged/main/default/objects/Case/fields/Dear_Valued_Customer__c.field-meta.xml
<CustomField>
    <fullName>Dear_Valued_Customer__c</fullName>
    <formula>IF( Contact.FirstName!=NULL , LEFT(Contact.FirstName,1) + LOWER(RIGHT(Contact.FirstName,LEN(Contact.FirstName)-1)),&#39;Valued Customer&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Name</label>
    <type>Text</type>
</CustomField>