unpackaged/main/default/objects/Case/fields/Default_From_Address__c.field-meta.xml
<CustomField>
    <fullName>Default_From_Address__c</fullName>
    <description>Default From Address for the case. Currently, only setup for Privacy Cases, based on Brand-Account</description>
    <label>Default From Address</label>
    <type>Email</type>
</CustomField>