unpackaged/main/default/objects/Case/fields/Description_READONLY__c.field-meta.xml
<CustomField>
    <fullName>Description_READONLY__c</fullName>
    <description>This READONLY field is created to store customers original details filled through web form</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>