unpackaged/main/default/objects/Case/fields/Dollar_Amount__c.field-meta.xml
<CustomField>
    <fullName>Dollar_Amount__c</fullName>
    <label>Dollar Amount</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>