unpackaged/main/default/objects/Case/fields/Duplicate_Case__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Case</label>
    <type>Checkbox</type>
</CustomField>