unpackaged/main/default/objects/Case/fields/ebotdata__Bot_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Bot_Deployment_Date__c</fullName>
    <formula>$CustomMetadata.ebotdata__Bot_Deploy_Date__mdt.ebotdata__defualt.ebotdata__Bot_Deployed_Date__c</formula>
    <label>Bot Deployment Date</label>
    <type>Date</type>
</CustomField>