unpackaged/main/default/objects/Case/fields/Eligible_for_7day_reminder__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_7day_reminder__c</fullName>
    <label>Eligible for 7day reminder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reminder Schedule</fullName>
            </value>
            <value>
                <fullName>Reminder Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>