unpackaged/main/default/objects/Case/fields/Email_Assignment_Code__c.field-meta.xml
<CustomField>
    <fullName>Email_Assignment_Code__c</fullName>
    <label>Email Assignment Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R</fullName>
                <label>Retail</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Ecomm</label>
            </value>
            <value>
                <fullName>W</fullName>
                <label>Wholesale</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Internal</label>
            </value>
            <value>
                <fullName>RS</fullName>
                <label>Retail Store</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>