unpackaged/main/default/objects/Case/fields/emailToAddress__c.field-meta.xml
<CustomField>
    <fullName>emailToAddress__c</fullName>
    <label>emailToAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>