unpackaged/main/default/objects/Case/fields/Escalation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Date_Time__c</fullName>
    <label>Escalation Date/Time</label>
    <type>DateTime</type>
</CustomField>