unpackaged/main/default/objects/Case/fields/First_Contact_Resolution__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Resolution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is automatically checked using a Workflow Field Update when a case status is changed from &#39;NEW&#39; to &quot;Resolved&quot;</description>
    <label>First Contact Resolution</label>
    <type>Checkbox</type>
</CustomField>