unpackaged/main/default/objects/Case/fields/First_Reply_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Reply_Time__c</fullName>
    <description>Counts the total amount of minutes it took between a case being created and the first email being sent (not counting auto-response)</description>
    <formula>( First_Reply_Time_Stamp__c  - CreatedDate)*1440</formula>
    <label>First Reply Time (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>