unpackaged/main/default/objects/Case/fields/First_Reply_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>First_Reply_Time_Stamp__c</fullName>
    <description>Displays date/time when the first activity was created by a rep on a particular case</description>
    <label>First Reply Time Stamp</label>
    <type>DateTime</type>
</CustomField>