unpackaged/main/default/objects/Case/fields/Follow_up_Case__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow up Case?</label>
    <type>Checkbox</type>
</CustomField>