unpackaged/main/default/objects/Case/fields/Gift_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_Number__c</fullName>
    <description>Tracks the gift card number collected in the web form.</description>
    <label>Gift Card Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>