unpackaged/main/default/objects/Case/fields/Has_Contact__c.field-meta.xml
<CustomField>
    <fullName>Has_Contact__c</fullName>
    <description>Used in Lightning App Builder for Component Visibility</description>
    <formula>NOT(ISBLANK(ContactId) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Contact</label>
    <type>Checkbox</type>
</CustomField>