unpackaged/main/default/objects/Case/fields/Hours_Since_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Hours_Since_Confirmation__c</fullName>
    <formula>IF(!ISBLANK(Privacy_User_Confirmed_Date__c),
FLOOR(NOW() - Privacy_User_Confirmed_Date__c ) * 24
+
FLOOR( MOD( (NOW() - Privacy_User_Confirmed_Date__c ) * 24, 24 ) )
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Since Confirmation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>