unpackaged/main/default/objects/Case/fields/Hours_Since_Consumer_Last_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Hours_Since_Consumer_Last_Contacted__c</fullName>
    <formula>IF(!ISBLANK(Privacy_Date_Consumer_Last_Contacted__c),
FLOOR(NOW() - Privacy_Date_Consumer_Last_Contacted__c ) * 24
+
FLOOR( MOD( (NOW() - Privacy_Date_Consumer_Last_Contacted__c ) * 24, 24 ) )
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Since Consumer Last Contacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>