unpackaged/main/default/objects/Case/fields/Hours_Since_Creation__c.field-meta.xml
<CustomField>
    <fullName>Hours_Since_Creation__c</fullName>
    <formula>FLOOR(NOW() - CreatedDate ) * 24</formula>
    <label>Hours Since Creation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>