unpackaged/main/default/objects/Case/fields/Hours_Since_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Hours_Since_Resolved__c</fullName>
    <formula>IF(!ISBLANK(Privacy_Case_Resolved_Date__c),
FLOOR(NOW() - Privacy_Case_Resolved_Date__c ) * 24
+
FLOOR( MOD( (NOW() - Privacy_Case_Resolved_Date__c ) * 24, 24 ) )
,0)</formula>
    <label>Hours Since Resolved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>